# tradier

./: .tarpaulin.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml
.github/workflows/: build.yml  changelog.yml  code_coverage.yml  format_check.yml  lint.yml  semver.yml
examples/: auth_example.rs  auth_websocket_example.rs  get_user_profile_example.rs
examples/blocking_client/: main.rs
examples/fundamentals_company/: main.rs
examples/http_stream_market/: main.rs
examples/market_data_quotes/: main.rs
examples/non_blocking_client/: main.rs
proptest-regressions/: test_support.txt
proptest-regressions/accounts/: test_support.txt  types.txt
proptest-regressions/client/: blocking.txt
proptest-regressions/http/: client.txt  user.txt
proptest-regressions/user/: test_support.txt
src/: constants.rs  error.rs  get_user_profile_schema.json  lib.rs  test_support.rs
src/accounts/: api.rs  get_account_gainloss_schema.json  get_account_history_schema.json  get_account_orders_schema.json  mod.rs  test_support.rs  types.rs
src/client/: blocking.rs  non_blocking.rs
src/common/: mod.rs
src/config/: base.rs  mod.rs
src/fundamentals/: api.rs  get_company_schema.json  get_corporate_actions_schema.json  get_corporate_calendars_schema.json  get_dividends_schema.json  get_financials_schema.json  get_ratios_schema.json  get_statistics_schema.json  mod.rs  test_support.rs  types.rs
src/http/: client.rs  mod.rs  user.rs
src/market_data/: api.rs  get_calendar_schema.json  get_history_schema.json  get_lookup_schema.json  get_option_chains_schema.json  get_option_expirations_schema.json  get_quotes_schema.json  get_timesales_schema.json  mod.rs  test_support.rs  types.rs
src/session/: account.rs  market.rs  mod.rs  session.rs
src/streaming/: http_stream.rs  mod.rs
src/user/: api.rs  mod.rs  test_support.rs  types.rs
src/utils/: logger.rs  mod.rs  one_or_many.rs  tests.rs
src/wssession/: account.rs  account_events.rs  events.rs  market.rs  mod.rs  session.rs  session_manager.rs  ws_decode.rs
