[package]
name = "tradier"
version = "0.1.2"
edition = "2021"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "This project involves the development of a Rust library for managing trades and market data using the Tradier broker API. The main objective is to provide an efficient and secure interface for executing trades, retrieving real-time quotes, managing portfolios, and accessing historical market data. The library focuses on leveraging Rust's performance and concurrency advantages, enabling integration into high-frequency trading applications and data-intensive financial processing."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/tradier"
homepage = "https://github.com/joaquinbejar/tradier"
keywords = ["finance", "options", "trading"]
categories = ["finance", "data-structures"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*.png",
    "Docker/**/*.Dockerfile",
    "Docker/**/*.yml",
]

[dependencies]
async-trait = "0.1.89"
bon = "3.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2.5"

[dev-dependencies]
httpmock = "0.8"
proptest = { version = "1.8" }
proptest-derive = "0.7"
jsonschema = "0.33"
serde_json = "1.0"
mockito = "1.7"
pretty_assertions = {version = "1.4", features = [ "unstable" ]}


[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[lib]
name = "tradier"
path = "src/lib.rs"

